--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine
 title: Hiya
-Description: A Introduction of our group
+description: A Introduction of our group
+theme: jekyll-theme-time-machine
