--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Hiya
-description: A Introduction of our group
+description: WELCOME! This is the page of our group -- Hiya
 theme: jekyll-theme-time-machine
