--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Hiya
 description: WELCOME! This is the page of our group -- Hiya
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-architect
